[gd_scene load_steps=13 format=3 uid="uid://dn0h10osvj8l4"]

[ext_resource type="Texture2D" uid="uid://dqqx1qr1c4dft" path="res://Textures/Player/player_sprite.png" id="1_fkhr3"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_fp2q8"]
[ext_resource type="PackedScene" uid="uid://c6lj84u0fegmg" path="res://Utility/hurt_box.tscn" id="3_e1xs0"]
[ext_resource type="Texture2D" uid="uid://7dmvisc7u0kr" path="res://Textures/GUI/exp_background.png" id="4_2wpt1"]
[ext_resource type="Texture2D" uid="uid://dyroyu71t53ff" path="res://Textures/GUI/exp_progress.png" id="5_dh274"]
[ext_resource type="FontFile" uid="uid://y4r3gmoegtqd" path="res://Font/tenderness.otf" id="6_lctsa"]
[ext_resource type="AudioStream" uid="uid://dos0ut37e7o2b" path="res://Audio/SoundEffect/levelup.ogg" id="7_bxx58"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xodcw"]
radius = 5.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63bka"]
size = Vector2(12, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_dyt1r"]
radius = 371.486

[sub_resource type="CircleShape2D" id="CircleShape2D_s4thh"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ial4y"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 13
motion_mode = 1
script = ExtResource("1_fp2q8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fkhr3")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_xodcw")

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_e1xs0")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 1.5)
shape = SubResource("RectangleShape2D_63bka")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
editor_description = "Controls the time it takes for ammo to reload."
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
editor_description = "Controls the cooldown for firing an Ice Spear."
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_dyt1r")

[node name="GrabArea" type="Area2D" parent="."]
editor_description = "Area that attracts loot towards the player."
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_s4thh")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_ial4y")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_2wpt1")
texture_progress = ExtResource("5_dh274")

[node name="LevelLabel" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_lctsa")
theme_override_font_sizes/font_size = 16
text = "Level 1:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelUpPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="LevelUpLabel" type="Label" parent="GUILayer/GUI/LevelUpPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_lctsa")
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUpPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="sound_level_up" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUpPanel"]
unique_name_in_owner = true
stream = ExtResource("7_bxx58")
volume_db = -10.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="area_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_area_entered"]
[connection signal="area_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_area_exited"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
